<resources>
    <string name="app_name" translatable="false">Spor Cantam</string>
    <string name="base_url">http://134.209.226.138:8080</string>
    <!--string name="base_url">http://10.0.2.2:8080</string-->


    <!-- Edit Text Hints -->
    <string name="edit_text_email_hint" translatable="false">Email</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="edit_text_surname_hint">Surname</string>
    <string name="edit_text_name_hint">Name</string>

    <!-- Button -->
    <string name="button_login_text">Login</string>
    <string name="button_sign_up_text">Sign Up</string>

    <!-- Login Activity -->
    <string name="login_activity_title">Login</string>

    <!-- SignUp Activity -->
    <string name="sign_up_activity_title">Sign Up</string>
    <string name="sign_up_activity_toast_invalid_email">Invalid Email</string>
    <string name="sign_up_activity_toast_invalid_name">Please enter name and surname</string>
    <string name="sign_up_activity_toast_invalid_password">Password must be at least 6 characters long</string>
    <string name="login_activity_toast_empty_boxes">Please fill password and email boxes</string>
    <string name="sign_up_activity_toast_invalid_company">Please enter company name</string>
    <string name="sign_up_activity_info_seller">Seller Login</string>
    <string name="sign_up_activity_info_customer">Customer Login</string>
    <string name="sign_up_activity_info_admin">Admin Login</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Item Create Activity -->
    <string name="item_create_item_title">Item Title</string>
    <string name="item_create_price">Price</string>
    <string name="item_create_seller">Seller</string>
    <string name="item_create_description">Description</string>
    <string name="item_create_shipping_info">Shipping Info</string>
    <string name="item_create_stock_count">Stock Count</string>
    <string name="item_create_date">Publishion Date</string>
    <string name="item_create_page_title">NEW ITEM</string>
    <string name="shipping_tax"><![CDATA[Shipping & Tax :]]></string>
    <string name="title_activity_admin_nav_main_page">AdminNavMainPage</string>
    <string name="title_activity_customer_main">Spor Cantam</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
