<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".activity.ItemView_UpdateActivity">

    <EditText
        android:id="@+id/editText_ItemView_UpdateActivityItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/button_ItemView_UpdateActivityUpdateSave"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toEndOf="@+id/button_ItemView_UpdateActivityDelete"
        app:layout_constraintTop_toTopOf="@+id/button_ItemView_UpdateActivityDelete"
        tools:text="@string/item_create_item_title" />

    <TextView
        android:id="@+id/textView_ItemView_UpdateActivityLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Description:"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/button_ItemView_UpdateActivityDelete"
        app:layout_constraintTop_toBottomOf="@+id/editText_ItemView_UpdateActivityItemTitle" />

    <EditText
        android:id="@+id/editText_ItemView_UpdateActivityDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_ItemView_UpdateActivityLabelDescription"
        app:layout_constraintTop_toTopOf="@+id/textView_ItemView_UpdateActivityLabelDescription"
        tools:text="@string/item_create_description" />

    <Button
        android:id="@+id/button_ItemView_UpdateActivityUpdateSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/light_pink"
        android:text="Update"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_ItemView_UpdateActivityItemTitle" />

    <Button
        android:id="@+id/button_ItemView_UpdateActivityDelete"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@color/light_pink"
        android:enabled="false"
        android:text="X"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ItemView_UpdateActivtyStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Stock Count:"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/textView_ItemView_UpdateActivityLabelDescription"
        app:layout_constraintTop_toBottomOf="@+id/editText_ItemView_UpdateActivityDescription" />

    <EditText
        android:id="@+id/editText_ItemView_UpdateActivityStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_ItemView_UpdateActivtyStock"
        app:layout_constraintTop_toTopOf="@+id/textView_ItemView_UpdateActivtyStock"
        tools:text="@string/item_create_stock_count" />

    <TextView
        android:id="@+id/textView_ItemView_UpdateActivityLabelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Price:"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/textView_ItemView_UpdateActivtyStock"
        app:layout_constraintTop_toBottomOf="@+id/editText_ItemView_UpdateActivityStock" />

    <EditText
        android:id="@+id/editText_ItemView_UpdateActivityPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView_ItemView_UpdateActivityLabelPrice"
        app:layout_constraintTop_toTopOf="@+id/textView_ItemView_UpdateActivityLabelPrice"
        tools:text="@string/item_create_price" />

    <TextView
        android:id="@+id/textView_ItemView_UpdateActivityLabelShipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Shipping Info"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/textView_ItemView_UpdateActivityLabelPrice"
        app:layout_constraintTop_toBottomOf="@+id/editText_ItemView_UpdateActivityPrice" />

    <EditText
        android:id="@+id/editText_ItemView_UpdateActivityShipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_ItemView_UpdateActivityLabelShipping"
        app:layout_constraintTop_toTopOf="@+id/textView_ItemView_UpdateActivityLabelShipping"
        tools:text="@string/item_create_shipping_info" />

    <TextView
        android:id="@+id/textView_ItemView_UpdateActivityLabelSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Seller"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/textView_ItemView_UpdateActivityLabelShipping"
        app:layout_constraintTop_toBottomOf="@+id/editText_ItemView_UpdateActivityShipping" />

    <EditText
        android:id="@+id/editText_ItemView_UpdateActivitySeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView_ItemView_UpdateActivityLabelSeller"
        app:layout_constraintTop_toTopOf="@+id/textView_ItemView_UpdateActivityLabelSeller"
        tools:text="@string/item_create_seller" />
</android.support.constraint.ConstraintLayout>